kubernetes/atletismo_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-atletismo-go
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: grpc-server-atletismo-go
  template:
    metadata:
      labels:
        app: grpc-server-atletismo-go
    spec:
      containers:
      - name: grpc-server-atletismo-go
        image: mrpony21/golang-server-atletismo-grpc:0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
        - containerPort: 50052
---
apiVersion: v1
kind: Service
metadata:
  name: atletismo-service #DNS
  namespace: sopes1
spec:
  selector:
    app: grpc-server-atletismo-go
  ports:
    - protocol: TCP
      port: 50052
      targetPort: 50052
  type: NodePort #ClusterIP
