kubernetes/boxeo_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-boxeo-go
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: grpc-server-boxeo-go
  template:
    metadata:
      labels:
        app: grpc-server-boxeo-go
    spec:
      containers:
      - name: grpc-server-boxeo-go
        image: mrpony21/golang-server-boxeo-grpc:0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
        - containerPort: 50053
---
apiVersion: v1
kind: Service
metadata:
  name: boxeo-service #DNS
  namespace: sopes1
spec:
  selector:
    app: grpc-server-boxeo-go
  ports:
    - protocol: TCP
      port: 50053
      targetPort: 50053
  type: NodePort #ClusterIP
