kubernetes/consumer_ganadores.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer-go-losers
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: kafka-consumer-go-losers
  template:
    metadata:
      labels:
        app: kafka-consumer-go-losers
    spec:
      containers:
      - name: kafka-consumer-go-losers
        image: mrpony21/consumer-losers:0.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
        - containerPort: 9090  # Cambié el puerto para evitar conflictos
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-consumer-go-losers-service #DNS del servicio
  namespace: sopes1
spec:
  selector:
    app: kafka-consumer-go-losers
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: NodePort  # Cambia a ClusterIP si no necesitas acceso externo
