kubernetes/rustclient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client-rust
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: grpc-client-rust
  template:
    metadata:
      labels:
        app: grpc-client-rust
    spec:
      containers:
      - name: grpc-client-rust
        image: mrpony21/rust-client-grpc:0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: rust-service
  namespace: sopes1
spec:
  selector:
    app: grpc-client-rust
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: NodePort #ClusterIP
